src/include/yices_types.h


typedef int32_t term_t;
typedef int32_t type_t;
typedef enum term_constructor {
  YICES_CONSTRUCTOR_ERROR = -1, 
  YICES_BOOL_CONSTANT,       
  YICES_ARITH_CONSTANT,      
  YICES_FF_CONSTANT,         
  YICES_ARITH_FF_CONSTANT = YICES_FF_CONSTANT, 
  YICES_BV_CONSTANT,         
  YICES_SCALAR_CONSTANT,     
  YICES_VARIABLE,            
  YICES_UNINTERPRETED_TERM,  
  YICES_ITE_TERM,            
  YICES_APP_TERM,            
  YICES_UPDATE_TERM,         
  YICES_TUPLE_TERM,          
  YICES_EQ_TERM,             
  YICES_DISTINCT_TERM,       
  YICES_FORALL_TERM,         
  YICES_LAMBDA_TERM,         
  YICES_NOT_TERM,            
  YICES_OR_TERM,             
  YICES_XOR_TERM,            
  YICES_BV_ARRAY,            
  YICES_BV_DIV,              
  YICES_BV_REM,              
  YICES_BV_SDIV,             
  YICES_BV_SREM,             
  YICES_BV_SMOD,             
  YICES_BV_SHL,              
  YICES_BV_LSHR,             
  YICES_BV_ASHR,             
  YICES_BV_GE_ATOM,          
  YICES_BV_SGE_ATOM,         
  YICES_ARITH_GE_ATOM,       
  YICES_ARITH_ROOT_ATOM,     
  YICES_ABS,                 
  YICES_CEIL,                
  YICES_FLOOR,               
  YICES_RDIV,                
  YICES_IDIV,                
  YICES_IMOD,                
  YICES_IS_INT_ATOM,         
  YICES_DIVIDES_ATOM,        
  YICES_SELECT_TERM,         
  YICES_BIT_TERM,            
  YICES_BV_SUM,              
  YICES_ARITH_SUM,           
  YICES_FF_SUM,              
  YICES_ARITH_FF_SUM = YICES_FF_SUM, 
  YICES_POWER_PRODUCT        
} term_constructor_t;